packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/correct/split_package.srcinfo
pkgbase = my-base
	pkgver = 0.1.0
	pkgrel = 1
	arch = any

pkgname = one

pkgname = two
