packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/parse_errors/invalid_checksum.srcinfo
pkgbase = test
	pkgver = 1.0.0
	pkgrel = 1
	arch = x86_64
	# Sha256 checksum is way too long
	sha256sums = 123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890

pkgname = test
